# a-beginners-guide-to-grpc-with-rust

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: say.proto
src/: client.rs  server.rs
